// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer correctly renders 1`] = `
<div
  className="timer__value"
  xmlns="http://www.w3.org/1999/xhtml"
>
  <span
    className="timer__mins"
  >
    00
  </span>
  <span
    className="timer__dots"
  >
    :
  </span>
  <span
    className="timer__secs"
  >
    30
  </span>
</div>
`;

exports[`Timer correctly renders if minutes and seconds < 10 1`] = `
<div
  className="timer__value"
  xmlns="http://www.w3.org/1999/xhtml"
>
  <span
    className="timer__mins"
  >
    09
  </span>
  <span
    className="timer__dots"
  >
    :
  </span>
  <span
    className="timer__secs"
  >
    09
  </span>
</div>
`;

exports[`Timer correctly renders if time < 30 sec 1`] = `
<div
  className="timer__value timer__value--warning"
  xmlns="http://www.w3.org/1999/xhtml"
>
  <span
    className="timer__mins"
  >
    00
  </span>
  <span
    className="timer__dots"
  >
    :
  </span>
  <span
    className="timer__secs"
  >
    29
  </span>
</div>
`;

exports[`Timer correctly renders if time over 1`] = `
<div
  className="timer__value timer__value--finished"
  xmlns="http://www.w3.org/1999/xhtml"
>
  <span
    className="timer__mins"
  >
    00
  </span>
  <span
    className="timer__dots"
  >
    :
  </span>
  <span
    className="timer__secs"
  >
    00
  </span>
</div>
`;
